package monitor;

import "gateway.proto";
import "qmppsm.proto";
option java_package = "com.sumscope";
option java_outer_classname = "Monitor";

message News { 
  required string title = 1;
  required string author = 2;
  required string date = 3;
  required string content = 4;
  optional int32 id=5;
}

message Faq { 
  required bytes question = 1;
  optional bytes answer = 2;
}

message Hello { 
  optional bytes content = 1;
  optional int32 i=2;
  optional int64 l=3;
  optional float f=4;
  optional string str=5;
}

message AccountReq {
  required string account = 1;
  required string password = 2;
}

message AccountRes {
  required int32 ret = 1; //0 success 1 failed
  optional int64 userid = 2;
  optional string companyid = 3;
  optional string token = 4;
  optional string accountid = 5;
}

message SubscribeReq {
  required Gateway.Subscribe monitorsb= 1;
}

message SubscribeRes {
  required int32 ret = 1;//0 success 1 failed
}

message AllUserInfoReq {
  required string companyid = 1;
  required string token = 2;
}

message ALLUserInfoRes {
 	required uint32 errorCode = 1;
	repeated SM.SMUserDetailInfo userInfo = 2;
}

message MessageReq {
    required string token = 1;
	repeated int64 useridStart = 2;
	repeated int64 useridEnd = 3;
	required int32 count = 4;
	optional int64 sequenceId = 5;
	optional string startTime = 6;
	optional string endTime = 7;
	optional bool isRoom = 8; //是否请求群消息
	optional bool isInclude = 9; //请求用户消息时是否请求包含群消息
	optional int64 lastSendTime = 10; //如果isInclude为true，该字段必须传
}

message MessageRes {
    repeated SM.SMMessage messages = 1;
}

message ExportFileReq {
    required MessageReq req = 1;
}

message ExportFileRes {
	required int32 result = 1;
	optional string url = 2;
}

message MessageReqByUser {
	repeated int64 useridStart = 1;
	repeated int64 useridEnd = 2;
	required int32 count = 3;
	optional string startTime = 4;
	optional string endTime = 5;
	optional int64 lastSendTime = 6;
}

message MessageReqByRoom {
	repeated int64 roomIds = 1;
	required int32 count = 2;
	optional string startTime = 3;
	optional string endTime = 4;
	optional int64 lastSendTime = 5;
    optional int64 userId = 6;	
	optional bool isShowSelfCompany = 7; //如果为true,allUserIds必须传
	repeated int64 allUserIds = 8;
}

message MessageResCommon {
    repeated SM.SMMessage messages = 1;
}

message ExportFileReqCommon {
    optional MessageReqByUser userReq = 1; //1 or 2 
	optional MessageReqByRoom roomReq = 2;
	optional bool requestUser =  3;//如果请求user则userreq不为null,如果请求room则roomReq不为null
}

message ExportFileResCommon {
	required int32 result = 1;
	optional string url = 2;
}


